# fancontroller

./: .gitmodules
fw/: README.md
fw/main/: CMakeLists.txt  app_main.c  power.c  tacho.c
fw/main/driver/: fusb302b-wrapper.cpp  fusb302b-wrapper.h  fusb302b.c  fusb302b.h  fusb302b_pd.h  fusb302b_registers.h  shtc3.c
